drone.io/300-app-droneio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: droneio-dev
  name: droneio-dev
  namespace: dev-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droneio-dev
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: droneio-dev
    spec:
      containers:
      - image: drone/drone:2
        name: drone
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - name: ca-pemstore
          mountPath: /etc/ssl/certs/root_ca.crt
          subPath: root_ca.crt
          readOnly: false
      volumes:
      - name: ca-pemstore
        configMap:
          name: ca-pemstore
          items:
            - key: root_ca.crt
              path: root_ca.crt
status: {}
