drone.io/301-runner-droneio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  labels:
    app.kubernetes.io/name: drone
  namespace: dev-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        volumeMounts:
        - name: ca-pemstore
          mountPath: /etc/ssl/certs/root_ca.crt
          subPath: root_ca.crt
          readOnly: false
        ports:
        - containerPort: 3000
      volumes:
      - name: ca-pemstore
        configMap:
          name: ca-pemstore
          items:
            - key: root_ca.crt
              path: root_ca.crt
