drone.io/200-svc-droneio.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: droneio-dev
  name: droneio
  namespace: dev-services
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: droneio-dev
  type: ClusterIP
status:
  loadBalancer: {}
