drone.io/201-ing-droneio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: droneio-ingress
  namespace: dev-services
  annotations:
    cert-manager.io/cluster-issuer: my-acme-server-with-eab
    acme.cert-manager.io/http01-edit-in-place: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - droneio.1.dev.connected-me.com
      secretName: dronio-dev-ingress-cert
  rules:
  - host: droneio.1.dev.connected-me.com
    http:
      paths:
      - backend:
          service:
            name: droneio
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
